--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,13 @@ body {
 }
 
 .underline {
+    color: inherit;
+    text-decoration: none;
     border-bottom: 1px solid rgba(255, 255, 255, 0.4);
 }
 
 .underline:hover {
+    color: inherit;
     border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
 
@@ -42,17 +45,17 @@ body {
 /* ------------------------------ */
 
 [data-current-chapter="c1"] {
-    font-family: 'Baskerville', 'Times New Roman', 'Georgia', serif;
-    color: rgba(0, 0, 0, 0.92);
+    font-family: 'Baskerville', 'Times New Roman', 'Georgia', 'Times', 'SimSun', serif;
+    color: rgba(0, 0, 0, 0.86);
 }
 
 [data-current-chapter="c2"] {
-    font-family: 'Futura', 'Verdana', 'Tahoma', 'Arial', sans-serif;
+    font-family: 'Futura', 'Avenir Next', 'Avenir', 'Verdana', 'Tahoma', 'Helvetica', 'Arial', 'Hiragino Sans GB', sans-serif;
     color: #FFF;
 }
 
 [data-current-chapter="c3"] {
-    font-family: 'Seravek', 'Segoe UI', 'Open Sans', 'Source Sans Pro', sans-serif;
+    font-family: 'Seravek', 'Segoe UI', 'Open Sans', 'Source Sans Pro', 'Helvetica', 'Hiragino Sans GB', sans-serif;
     color: #FFF;
 }
 
@@ -95,7 +98,8 @@ body {
     top: 0;
     left: 0;
     z-index: 1000;
-    box-shadow: rgba(0, 0, 0, 0.15) 0 -9vh 30vh inset;
+    /*box-shadow: rgba(0, 0, 0, 0.15) 0 -9vh 30vh inset;*/
+    /*box-shadow: rgba(255, 255, 255, 0.94) 0 0 0 8px inset;*/
     transition: all 330ms ease;
 }
 
@@ -178,16 +182,25 @@ h1 {
     margin: 0 auto;
 }
 
-.option {
-    background-size: cover;
-    /*border: 1px solid #000;*/
-    border-radius: 6px;
+.option, .option-correctness-indicator {
     display: block;
     float: left;
     width: 230px;
-    padding: 0;
     margin: 0 10px;
+}
+
+.option {
+    background-size: cover;
+    border-radius: 6px;
+    float: left;
+    padding: 0;
     cursor: pointer;
+}
+
+.option-correctness-indicator {
+    padding: 10px 0 0;
+    opacity: 0;
+    transition: opacity 200ms ease;
 }
 
 .options-playground[data-options-playground-type="A"] {
@@ -206,7 +219,7 @@ h1 {
     height: 150px;
 }
 
-.options-playground[data-options-playground-type="A"] .options, .options-playground[data-options-playground-type="A"] .option {
+.options-playground[data-options-playground-type="A"] .options, .options-playground[data-options-playground-type="A"] .option, .option-correctness-indicators, .option-correctness-indicator {
     height: 230px;
 }
 
@@ -280,7 +293,7 @@ h1 {
     border-radius: 50px;
     width: 90px;
     height: 5px;
-    transition: none;
+    transition: all 300ms ease-out;
 }
 
 /* ------------------------------ */
