--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,16 @@ body {
 .underline {
     color: inherit;
     text-decoration: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
 }
 
 .underline:hover {
     color: inherit;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+}
+
+.no-underline, .no-underline:link, .no-underline:visited, .no-underline:hover, .no-underline:active {
+    text-decoration: none;
 }
 
 .cursor-pointer {
@@ -98,8 +102,6 @@ body {
     top: 0;
     left: 0;
     z-index: 1000;
-    /*box-shadow: rgba(0, 0, 0, 0.15) 0 -9vh 30vh inset;*/
-    /*box-shadow: rgba(255, 255, 255, 0.94) 0 0 0 8px inset;*/
     transition: all 330ms ease;
 }
 
