Really ready to pusblish

--- a/css/main.css
+++ b/css/main.css
@@ -309,3 +309,9 @@ h1 {
     padding: 50px 20px 0;
     z-index: 9889;
 }
+
+/* ------------------------------ */
+
+#xtjj-4270203835628303 {
+    z-index: 9999;
+}
